# livevoiceagent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Procfile.dev  README.en.md  README.md  README.zh.md  langgraph.json  pyproject.toml
DOCS/: Kokoro-82M.md  SileroVAD.md  langchain_model.md  refer.md  twilio.md
TODO/: 1.md  2.md  3.md  4.md  5.md  init.md
scripts/: live_ws_voice_chat.py  test_ws_voice.py
src/agent/: config.py  domain.py  graph.py  guard_notify.py  models.py  query_graph.py  tracing.py
src/voice/: __init__.py  agent_stream.py  app.py  audio.py  live_ws_client.py  speech.py  tts_pipeline.py  ws_test_client.py
src/wecom_bot/: __init__.py  assistant.py  bridge.py  main.py
tests/fixtures/audio/: testvoice.m4a
tests/integration_tests/: test_audio_recognition.py  test_graph.py  test_voice_stack.py
tests/unit_tests/: test_agent_models.py  test_configuration.py  test_voice_app.py  test_voice_audio.py  test_voice_live_ws_client.py  test_voice_speech.py  test_voice_ws_flow.py  test_voice_ws_test_client.py  test_wecom_bot.py
