[project]
name = "voiceagent"
version = "0.1.0"
description = "Minimal LangChain agent template for LangSmith/LangGraph deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.23.9",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "kokoro>=0.9.0",
    "langchain[google-genai]>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.3.9",
    "misaki[zh]>=0.9.4",
    "numpy>=2.1.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.1",
    "silero-vad>=6.0.0",
    "twilio>=9.3.0",
    "uvicorn[standard]>=0.32.0",
    "wecom-aibot-sdk-python>=0.1.6",
    "websockets>=15.0.1",
    "langfuse>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.10",
    "pytest>=8.3.5",
    "ruff>=0.8.0",
]

[tool.uv.build-backend]
module-name = ["agent", "voice", "wecom_bot"]
source-include = ["langgraph.json", ".env.example", "Makefile", "tests/**"]
